feat: Add complete deployment and system test scripts for Domain MAX
- Implemented `deploy-complete.sh` for automated deployment process including environment setup, SSL certificate generation, and service deployment.
- Created `generate-ssl.sh` to generate self-signed SSL certificates for development.
- Developed `system-test.sh` for comprehensive system functionality testing, including API, authentication, DNS functionality, security, performance, and data persistence tests.
- Added `.env.development` for frontend environment configuration.
- Introduced `ErrorBoundary` component for error handling in React application.
- Established API service layer with Axios for handling requests and responses.
- Implemented Zustand store for managing DNS providers and records state.
- Defined TypeScript types for API requests and responses.
- Enhanced Vite environment type definitions for better type safety.

--- a/.github/workflows/Dockerbuild.yml
+++ b/.github/workflows/Dockerbuild.yml
@@ -1,11 +1,23 @@
-name: Docker Build & Push with Cache
+name: Docker Build & Push with Cache（默认禁用）
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-  workflow_dispatch: # 支持手动触发
+  # 默认禁用自动触发，需要手动启用
+  # push:
+  #   branches: [main]
+  # pull_request:
+  #   branches: [main]
+  workflow_dispatch:
+    inputs:
+      enable_workflow:
+        description: "启用工作流（默认禁用）"
+        required: true
+        default: false
+        type: boolean
+      push_to_registry:
+        description: "推送到注册表"
+        required: false
+        default: true
+        type: boolean
 
 env:
   REGISTRY: ghcr.io
@@ -14,6 +26,7 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    if: ${{ inputs.enable_workflow == true }}
     permissions:
       contents: read
       packages: write
