--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -1,47 +1,63 @@
 version: "3.8"
 
 services:
-  # 应用服务
+  # Application service
   app:
     build:
       context: ..
       dockerfile: deployments/Dockerfile
+      args:
+        - BUILDTIME=${BUILDTIME:-unknown}
+        - VERSION=${VERSION:-development}
+    image: domain-max:latest
+    container_name: domain-max-app
     ports:
-      - "8080:8080"
+      - "${APP_PORT:-8080}:8080"
     environment:
-      # 服务器配置
+      # Server configuration
       - PORT=8080
-      - ENVIRONMENT=production
+      - ENVIRONMENT=${ENVIRONMENT:-production}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
 
-      # 数据库配置
+      # Database configuration
       - DB_HOST=db
       - DB_PORT=5432
-      - DB_USER=postgres
-      # 必须设置：数据库密码（从.env文件或环境变量读取）
+      - DB_USER=${DB_USER:-postgres}
       - DB_PASSWORD=${DB_PASSWORD}
-      - DB_NAME=domain_manager
+      - DB_NAME=${DB_NAME:-domain_manager}
       - DB_TYPE=postgres
+      - DB_SSL_MODE=${DB_SSL_MODE:-require}
+      - DB_MAX_CONNECTIONS=${DB_MAX_CONNECTIONS:-25}
 
-      # 必须设置：JWT密钥（从.env文件或环境变量读取）
+      # Security configuration
       - JWT_SECRET=${JWT_SECRET}
-
-      # 必须设置：AES加密密钥（从.env文件或环境变量读取）
+      - JWT_EXPIRES_IN=${JWT_EXPIRES_IN:-24h}
       - ENCRYPTION_KEY=${ENCRYPTION_KEY}
+      - BCRYPT_COST=${BCRYPT_COST:-12}
 
-      # 邮件配置 (可选)
-      - SMTP_HOST=smtp.gmail.com
-      - SMTP_PORT=587
-      - SMTP_USER=your_email@gmail.com
-      - SMTP_PASSWORD=your_app_password
-      - SMTP_FROM=noreply@yourdomain.com
+      # Email configuration (optional)
+      - SMTP_HOST=${SMTP_HOST:-}
+      - SMTP_PORT=${SMTP_PORT:-587}
+      - SMTP_USER=${SMTP_USER:-}
+      - SMTP_PASSWORD=${SMTP_PASSWORD:-}
+      - SMTP_FROM=${SMTP_FROM:-noreply@domain-max.com}
+      - SMTP_TLS=${SMTP_TLS:-true}
 
-      # DNSPod配置 (可选，可在管理后台配置)
-      - DNSPOD_TOKEN=your_dnspod_token_here
+      # Rate limiting
+      - RATE_LIMIT_REQUESTS=${RATE_LIMIT_REQUESTS:-100}
+      - RATE_LIMIT_WINDOW=${RATE_LIMIT_WINDOW:-1m}
+
+      # CORS configuration
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-*}
+
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - domain-max-network
+    volumes:
+      - app_logs:/app/logs
     healthcheck:
       test:
         [
@@ -56,34 +72,147 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: 1G
+        reservations:
+          cpus: "0.5"
+          memory: 256M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
-  # 数据库服务
+  # Database service
   db:
     image: postgres:15-alpine
+    container_name: domain-max-db
     environment:
-      - POSTGRES_DB=domain_manager
-      - POSTGRES_USER=postgres
-      # 必须与应用的DB_PASSWORD保持一致
+      - POSTGRES_DB=${DB_NAME:-domain_manager}
+      - POSTGRES_USER=${DB_USER:-postgres}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
+      - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ../configs/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ./postgres/postgresql.conf:/etc/postgresql/postgresql.conf:ro
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
     ports:
-      - "5432:5432" # 仅开发时暴露，生产环境可以移除
+      - "${DB_PORT:-5432}:5432"
     restart: unless-stopped
     networks:
       - domain-max-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d domain_manager"]
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-domain_manager}",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 30s
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: 512M
+        reservations:
+          cpus: "0.25"
+          memory: 128M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  # Redis for caching (optional)
+  redis:
+    image: redis:7-alpine
+    container_name: domain-max-redis
+    ports:
+      - "${REDIS_PORT:-6379}:6379"
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
+    volumes:
+      - redis_data:/data
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
+    command: redis-server /usr/local/etc/redis/redis.conf
+    restart: unless-stopped
+    networks:
+      - domain-max-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: 256M
+        reservations:
+          cpus: "0.1"
+          memory: 64M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+        max-file: "2"
+
+  # Nginx reverse proxy
+  nginx:
+    image: nginx:alpine
+    container_name: domain-max-nginx
+    ports:
+      - "${NGINX_HTTP_PORT:-80}:80"
+      - "${NGINX_HTTPS_PORT:-443}:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
+      - nginx_logs:/var/log/nginx
+    depends_on:
+      - app
+    restart: unless-stopped
+    networks:
+      - domain-max-network
+    healthcheck:
+      test: ["CMD", "nginx", "-t"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: 256M
+        reservations:
+          cpus: "0.1"
+          memory: 64M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 networks:
   domain-max-network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
 
 volumes:
   postgres_data:
+    driver: local
+  redis_data:
+    driver: local
+  app_logs:
+    driver: local
+  nginx_logs:
     driver: local
