feat: Implement Domain MAX API and Frontend Configuration for VPS Deployment
- Added .env.vps for VPS deployment configuration with database and security settings.
- Created build-api.sh for building and running the API service.
- Developed main.go for the API server with database connection and routing.
- Introduced dev.sh for local development setup and management.
- Established separation of deployment documentation for frontend and backend.
- Configured web environment variables for Cloudflare Pages and local development.
- Enhanced vite.config.ts for compatibility with Cloudflare Pages.
- Added support for React Router and API proxying in Cloudflare Pages.
- Implemented environment variable handling in the frontend application.

--- a/web/.env.development
+++ b/web/.env.development
@@ -1,4 +1,27 @@
-# API 基础 URL
+# Domain MAX 开发环境配置
+# 本地前后端分离开发
+
+# API 基础URL（本地后端服务）
+VITE_API_BASE_URL=http://localhost:8080
+
+# 后端域名
+VITE_BACKEND_DOMAIN=localhost:8080
+
+# 构建环境
+NODE_ENV=development
+
+# 应用信息
+VITE_APP_TITLE=Domain MAX (开发)
+VITE_APP_DESCRIPTION=域名与DNS管理平台 - 开发环境
+VITE_APP_VERSION=1.0.0-dev
+
+# 功能开关（开发环境启用调试）
+VITE_DEBUG_MODE=true
+VITE_LOG_API_REQUESTS=true
+VITE_ENABLE_ANALYTICS=false
+
+# 开发工具
+VITE_ENABLE_DEVTOOLS=true
 VITE_API_BASE_URL=http://localhost:8080/api
 
 # 应用环境
