--- a/.env.example
+++ b/.env.example
@@ -1,63 +1,61 @@
-# Domain MAX Environment Configuration
+# Domain MAX Environment Configuration - 前后端分离版本
 # Copy this file to .env and configure your settings
+
+# ==============================================
+# DEPLOYMENT MODE SETTINGS
+# ==============================================
+
+# 环境模式：development, production
+APP_MODE=production
+ENVIRONMENT=production
+
+# 应用端口（API服务端口）
+PORT=8080
+
+# API基础URL（VPS域名）
+BASE_URL=https://api.yourdomain.com
+
+# ==============================================
+# CORS SETTINGS (前后端分离重要配置)
+# ==============================================
+
+# 允许的前端域名（多个用逗号分隔）
+# 生产环境示例：https://your-app.pages.dev,https://yourdomain.com
+# 开发环境会自动允许localhost
+CORS_ALLOWED_ORIGINS=https://your-app.pages.dev,https://yourdomain.com
+
+# ==============================================
+# REMOTE DATABASE SETTINGS
+# ==============================================
+
+# 数据库类型：postgres, mysql
+DB_TYPE=postgres
+
+# 远程数据库连接信息
+DB_HOST=your-db-host.com
+DB_PORT=5432
+DB_USER=your_db_user
+DB_PASSWORD=your_secure_database_password_here
+DB_NAME=domain_manager
+
+# SSL模式：require, disable, prefer, verify-full
+# 生产环境建议使用 require 或 verify-full
+DB_SSL_MODE=require
 
 # ==============================================
 # SECURITY SETTINGS (Required)
 # ==============================================
 
-# Database password - Use a strong password (minimum 12 characters)
-DB_PASSWORD=your_secure_database_password_here
-
 # JWT secret key - Use a strong random string (minimum 32 characters)
 # Generate with: openssl rand -base64 32
 JWT_SECRET=your_jwt_secret_key_here_minimum_32_characters
 
-# AES encryption key - Must be exactly 32 characters
-# Generate with: openssl rand -hex 16
-ENCRYPTION_KEY=your_32_character_encryption_key_12
+# AES encryption key - Must be exactly 32 characters (64 hex chars)
+# Generate with: openssl rand -hex 32
+ENCRYPTION_KEY=your_64_character_encryption_key_here_must_be_exactly_64_chars
 
-# ==============================================
-# APPLICATION SETTINGS
-# ==============================================
-
-# Environment mode
-ENVIRONMENT=production
-
-# Application ports
-APP_PORT=8080
-NGINX_HTTP_PORT=80
-NGINX_HTTPS_PORT=443
-
-# Logging level (debug, info, warn, error)
-LOG_LEVEL=info
-
-# ==============================================
-# DATABASE SETTINGS
-# ==============================================
-
-# Database configuration
-DB_NAME=domain_manager
-DB_USER=postgres
-DB_PORT=5432
-DB_SSL_MODE=require
-DB_MAX_CONNECTIONS=25
-
-# ==============================================
-# SECURITY & AUTH SETTINGS
-# ==============================================
-
-# JWT token expiration
-JWT_EXPIRES_IN=24h
-
-# Bcrypt hashing cost (10-15 recommended)
-BCRYPT_COST=12
-
-# Rate limiting
-RATE_LIMIT_REQUESTS=100
-RATE_LIMIT_WINDOW=1m
-
-# CORS configuration
-CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+# JWT token expiration (hours)
+JWT_EXPIRATION_HOURS=24
 
 # ==============================================
 # EMAIL SETTINGS (Optional)
@@ -69,30 +67,37 @@ SMTP_PORT=587
 SMTP_USER=your_email@gmail.com
 SMTP_PASSWORD=your_app_password
 SMTP_FROM=noreply@yourdomain.com
-SMTP_TLS=true
 
 # ==============================================
-# REDIS SETTINGS (Optional)
+# DNS PROVIDER TOKENS (Optional)
 # ==============================================
 
-# Redis configuration for caching
-REDIS_PORT=6379
-REDIS_PASSWORD=your_redis_password
+# DNSPod Token (if using DNSPod)
+DNSPOD_TOKEN=your_dnspod_token_here
 
 # ==============================================
-# BUILD SETTINGS
+# CLOUD DATABASE EXAMPLES
 # ==============================================
 
-# Build metadata
-VERSION=1.0.0
-BUILDTIME=$(date -u +%Y-%m-%dT%H:%M:%SZ)
+# PlanetScale (MySQL)
+# DB_TYPE=mysql
+# DB_HOST=your-db.planetscale.com
+# DB_PORT=3306
+# DB_SSL_MODE=require
+
+# Supabase (PostgreSQL)
+# DB_TYPE=postgres
+# DB_HOST=db.your-project.supabase.co
+# DB_PORT=5432
+# DB_SSL_MODE=require
+
+# AWS RDS (PostgreSQL/MySQL)
+# DB_HOST=your-db.region.rds.amazonaws.com
+# DB_SSL_MODE=require
 
 # ==============================================
-# DEVELOPMENT OVERRIDES
+# CLOUDFLARE PAGES INTEGRATION
 # ==============================================
 
-# Uncomment these for development
-# ENVIRONMENT=development
-# LOG_LEVEL=debug
-# DB_SSL_MODE=disable
-# CORS_ALLOWED_ORIGINS=*
+# 如果使用Cloudflare Pages，建议的CORS配置：
+# CORS_ALLOWED_ORIGINS=https://your-project.pages.dev,https://your-custom-domain.com
